[package]
name = "ipa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lambdaworks-math = { git = "https://github.com/lambdaclass/lambdaworks.git" }
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
rand = { version = "0.8", features = [ "std", "std_rng" ] }
